<resources
    xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Be My Hart</string>
    <string name="home">Home</string>
    <string name="near_me">Near me</string>
    <string name="search">search</string>
    <string name="profile">Profile</string>
    <string name="favourite">Favorite people</string>
    <string name="share_app">Share App</string>
    <string name="support">Support</string>
    <string name="app_info">App Info.</string>
    <string name="communicate">Communicate</string>
    <string name="add">add</string>

    <string name="open" translatable="false">Drawer Open</string>
    <string name="close" translatable="false">Drawer Close</string>

    <string name="fans">Fans</string>
    <string name="my_friends">My Friends</string>
    <string name="setting">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="love">Love</string>
    <string name="comment">Comment</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Create a new Account.</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already, I Have an Account.</string>
    <string name="create_account">Sign UP</string>
    <string name="UserNameRequire">User Name is Require</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="add_story">Add Story</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="gender">Gender</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="weight">Weight</string>
    <string name="high">Height</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>