<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home_drawer"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/friends_list_drawer"
            android:title="@string/my_friends"
            android:icon="@drawable/ic_friends_list"/>

        <item
            android:id="@+id/favourite_drawer"
            android:title="@string/favourite"
            android:icon="@drawable/ic_favourite"/>

        <item
            android:id="@+id/profile_drawer"
            android:title="@string/profile"
            android:icon="@drawable/ic_person"/>

        <item
            android:id="@+id/setting_drawer"
            android:title="@string/setting"
            android:icon="@drawable/ic_settings"/>

        <item
            android:id="@+id/dark_mode_drawer"
            android:title="@string/dark_theme"
            android:icon="@drawable/ic_dark_mode"
            android:actionLayout="@layout/theme_switch"/>

    </group>

    <item
        android:title="@string/communicate"
        android:checkableBehavior="single">

        <menu>

            <item
                android:icon="@drawable/ic_share"
                android:title="@string/share_app" />

            <item
                android:icon="@drawable/ic_support"
                android:title="@string/support" />

            <item
                android:icon="@drawable/ic_info"
                android:title="@string/app_info" />

        </menu>

    </item>

</menu>